crates/ironauth-jose/tests/compile-fail/reach_crypto_primitive.stderr
error[E0603]: module `crypto` is private
 --> tests/compile-fail/reach_crypto_primitive.rs:9:28
  |
9 |     let _ = ironauth_jose::crypto::verify_signature;
  |                            ^^^^^^  ---------------- function `verify_signature` is not publicly re-exported
  |                            |
  |                            private module
  |
note: the module `crypto` is defined here
 --> src/lib.rs
  |
  | mod crypto;
  | ^^^^^^^^^^
